<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>de.schmizzolin.maven.poms</groupId>
    <artifactId>parent</artifactId>
    <version>1.6.2-SNAPSHOT</version>
  </parent>

  <name>Vish</name>
  <description>Mounts vault secrets as a filesystem and opens a shell inside.</description>
  <inceptionYear>2023</inceptionYear>

  <properties>
    <java.major>20</java.major>
    <maven.javadoc.skip>true</maven.javadoc.skip>
  </properties>

  <groupId>de.mlhartme</groupId>
  <artifactId>vish</artifactId>
  <version>1.0.0-SNAPSHOT</version>

  <packaging>jar</packaging>

  <developers>
    <developer>
      <id>mlhartme</id>
      <name>Michael Hartmeier</name>
      <roles><role>lead</role></roles>
    </developer>
  </developers>

  <scm>
    <developerConnection>scm:git:https://github.com/mlhartme/vish.git</developerConnection>
    <connection>scm:git:https://github.com/mlhartme/vish.git</connection>
    <url>https://github.com/mlhartme/vish</url>
    <tag>HEAD</tag>
  </scm>
  <dependencies>
    <dependency>
      <groupId>net.oneandone</groupId>
      <artifactId>sushi</artifactId>
      <version>3.3.0</version>
    </dependency>
    <dependency>
      <groupId>net.oneandone</groupId>
      <artifactId>inline</artifactId>
      <version>1.2.0</version>
    </dependency>

    <dependency>
      <groupId>com.bettercloud</groupId>
      <artifactId>vault-java-driver</artifactId>
      <version>5.1.0</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.9.3</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <phase>generate-sources</phase>
            <goals>
              <goal>exec</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <executable>src/generate.sh</executable>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
            <source>19</source>
            <target>19</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.4.0</version>
        <executions>
          <execution>
            <id>add-source</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>work/generated/fuse</source>
                <source>work/generated/errno</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>com.mycila.maven-license-plugin</groupId>
        <artifactId>maven-license-plugin</artifactId>
        <version>1.10.b1</version>
        <configuration>
          <header>${basedir}/src/license-header.txt</header>
          <strictCheck>true</strictCheck>
          <includes>
            <include>src/**/*.java</include>
          </includes>
          <mapping>
            <java>SLASHSTAR_STYLE</java>
          </mapping>
        </configuration>
      </plugin>
      <plugin>
        <groupId>net.oneandone.maven.plugins</groupId>
        <artifactId>application</artifactId>
        <version>1.8.0-SNAPSHOT</version>
        <configuration>
          <name>vish</name>
          <main>de.schmizzolin.vish.Main</main>
          <java>$(/usr/libexec/java_home -v 20)/bin/java</java>
          <options>"-Djava.awt.headless=true --enable-preview --enable-native-access=ALL-UNNAMED"</options>
          <remove>module-info.class, META-INF/versions/9/module-info.class, META-INF/BC1024KE.*, META-INF/BC2048KE.*, META-INF/BCKEY.*, about.html, META-INF/maven/org.codehaus.plexus/plexus-interpolation/pom.*, META-INF/wsd.properties, META-INF/pominfo.properties, META-INF/maven/plugin.xml</remove>
          <equal>com/jcraft/jsch/agentproxy/*.class, META-INF/BC????KE.*</equal>
          <concat>META-INF/sisu/javax.inject.Named, META-INF/DEPENDENCIES, **/LICENSE, **/LICENSE.txt, **/NOTICE, **/NOTICE.txt</concat>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>generate</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--enable-preview</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
